--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   package_info: '>=0.4.3 <2.0.0'
+  flutter_modular: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
