--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   cupertino_icons: ^0.1.3
   package_info: '>=0.4.3 <2.0.0'
   flutter_modular: ^2.0.0+1
+  bloc: ^6.0.3
+  flutter_bloc: ^6.0.4
+  bloc_test: ^7.0.3
+  equatable: ^1.2.4
 
 dev_dependencies:
   flutter_test:
