--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   package_info: '>=0.4.3 <2.0.0'
   flutter_modular: ^2.0.0+1
   bloc: ^6.0.3
   flutter_bloc: ^6.0.4
   bloc_test: ^7.0.3
   equatable: ^1.2.4
+  http: ^0.12.2
+  geolocator: ^6.0.0+2
 
 dev_dependencies:
   flutter_test:
