--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^1.2.4
   http: ^0.12.2
   geolocator: ^6.0.0+2
+  geocoding: ^1.0.3
 
 dev_dependencies:
   flutter_test:
