--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,18 @@ dependencies:
   package_info: '>=0.4.3 <2.0.0'
   flutter_modular: ^2.0.0+1
   bloc: ^6.0.3
-  flutter_bloc: ^6.0.4
-  bloc_test: ^7.0.3
-  equatable: ^1.2.4
+  flutter_bloc: ^6.0.5
+  equatable: ^1.2.5
   http: ^0.12.2
-  geolocator: ^6.0.0+2
+  geolocator: ^6.0.0+4
   geocoding: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.15.3
+  bloc_test: ^7.0.4
+  mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
