--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   equatable: ^1.2.5
   http: ^0.12.2
   geolocator: ^6.0.0+4
-  geocoding: ^1.0.3
+  geocoding: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.15.3
+  flutter_driver:
+    sdk: flutter
   bloc_test: ^7.0.4
   mockito: ^4.1.1
 
